# Tasker

./: CMakeLists.txt  run  runApp
include/: AddTask.hpp  Enums.hpp  EveryDay.hpp  EveryWeek.hpp  IInput.hpp  RandomTask.hpp  SimpleTask.hpp  Task.hpp
src/: AddTask.cpp  EveryDay.cpp  EveryWeek.cpp  RandomTask.cpp  SimpleTask.cpp  Task.cpp
ut/: AddTaskTest.cpp  InputMock.hpp  main.cpp  taskClassesTest.cpp
